# navigator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  conanfile.txt  doc.md  setup.iss
.github/workflows/: landing.yml
examples/: 001-shader.lua  002-framebuffer.lua  003-cube.lua  004-physics.lua  005-wasd.lua  006-dots.lua  007-voxels.lua  008-pathfind.lua  009-sfx.lua  010-image.lua  011-ibl.lua  012-raymarcher.lua  013-compute.lua  014-log.lua  index.lua
examples/includes/: orbitcontrols.lua  shaderchunks.lua  wasdcontrols.lua
landing/: package.json  pnpm-lock.yaml  rollup.config.js  tsconfig.json
landing/src/: index.d.ts  index.html  main.svelte
landing/src/components/: code.svelte  discord.svelte  doc.svelte  navigator.svelte
landing/src/icons/: github.svelte  linux.svelte  windows.svelte
src/: main.cpp  win32.rc
src/core/: http.cpp  http.hpp  physics.cpp  physics.hpp  script.cpp  script.hpp  sfx.cpp  sfx.hpp  vm.cpp  vm.hpp  window.cpp  window.hpp
src/core/lib/: http_ca.hpp  icons.hpp  imgui_markdown.h  imgui_texteditor.cpp  imgui_texteditor.h  luajson.c  luajson.hpp  roboto.hpp  stlastar.hpp
src/gl/: camera.cpp  camera.hpp  cubemapbuffer.cpp  cubemapbuffer.hpp  environment.cpp  environment.hpp  framebuffer.cpp  framebuffer.hpp  geometry.cpp  geometry.hpp  image.cpp  image.hpp  mesh.cpp  mesh.hpp  object.cpp  object.hpp  raycaster.cpp  raycaster.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/gl/primitives/: box.cpp  box.hpp  plane.cpp  plane.hpp  sphere.cpp  sphere.hpp
src/gl/textures/: brdf.cpp  brdf.hpp  irradiance.cpp  irradiance.hpp
src/gl/voxels/: chunk.cpp  chunk.hpp  node.cpp  node.hpp  volume.cpp  volume.hpp
